# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./contactInquiries";
 export * from "./portfolioAccessRequests";
+export * from "./velocityOsIntakes";
